$Id$

			 Commons IO Package
			    Version 1.4
			   Release Notes


INTRODUCTION:

Commons IO is a package of Java utility classes for java.io's hierarchy.  
Classes in this package are considered to be so standard and of such high 
reuse as to justify existence in java.io.

Commons IO contains utility classes, stream implementations, file filters, 
and endian transformation classes.


Compatibility with 1.3.2
------------------------
Binary compatible - ?

Source compatible - ?

Semantic compatible - ?


Bug fixes from 1.3.2
--------------------

Enhancements from 1.3.2
-----------------------
- ThesholdingOuputStream [IO-121]
  - Add a reset() method which sets the count of the bytes written back to zero.

- PrefixFileFilter [IO-126]
  - Add faciltiy to specify case sensitivty on prefix matching

- SuffixFileFilter [IO-126]
  - Add faciltiy to specify case sensitivty on suffix matching


Feedback
--------
Open source works best when you give feedback:
http://commons.apache.org/io/

Please direct all bug reports to JIRA
http://issues.apache.org/jira/browse/IO

Or subscribe to the commons-user mailing list (prefix emails by [io])
http://jakarta.apache.org/site/mail.html

The Commons-IO Team